--- a/index.html
+++ b/index.html
@@ -32,13 +32,62 @@
         <!-- Notícia 1 -->
         <article>
             <div class="foto">
-                <img src="./img/icone.png" alt="">
+                <img src="./img/noticia-01.jpg" alt="Israel e Hezbollah trocam ataques aéreos">
             </div>
 
             <div class="conteudo">
                 <span>
-                    <h3>Titulo 1</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3>Israel e Hezbollah trocam ataques aéreos</h3>
+                    <p class="texto">Lorem.</p>
+                </span>
+
+                <p class="leia-mais">leia mais ></p>
+            </div>
+        </article>
+
+       <!-- Notícia 2 -->
+       <article>
+        <div class="foto">
+            <img src="./img/noticia-02.jpg" alt="Eleições nos EUA: O que é voto facultativo e por que ele é adotado">
+        </div>
+
+        <div class="conteudo">
+            <span>
+                <h3>Eleições nos EUA: O que é voto facultativo e por que ele é adotado</h3>
+
+                <p class="texto">Lorem, ipsum.</p>
+            </span>
+
+            <p class="leia-mais">leia mais ></p>
+        </div>
+    </article>
+
+        <!-- Notícia 3 -->
+        <article>
+            <div class="foto">
+                <img src="./img/noticia-03.jpg" alt="Capivara brasileira foge de zoológico na Inglaterra">
+            </div>
+
+            <div class="conteudo">
+                <span>
+                    <h3>Capivara brasileira foge de zoológico na Inglaterra</h3>
+                    <p class="texto">Lorem, ipsum dolor.</p>
+                </span>
+
+                <p class="leia-mais">leia mais ></p>
+            </div>
+        </article>
+
+        <!-- Notícia 4 -->
+        <article>
+            <div class="foto">
+                <img src="./img/noticia-04.jpg" alt="IOS 18 está liberado para todos os usuários">
+            </div>
+
+            <div class="conteudo">
+                <span>
+                    <h3>IOS 18 está liberado para todos os usuários</h3>
+                    <p class="texto">Lorem ipsum dolor sit. </p>
                 </span>
 
                 <p class="leia-mais">leia mais ></p>
