Ajustes Media Queries

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
             <span>Buenas</span> News
         </div>
 
-        <nav>
+        <nav class="menu">
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">ESPORTES</a></li>
                 <li><a href="">FILMES</a></li>
                 <li><a href="">POLITICA</a></li>
             </ul>
+        </nav>
+
+        <nav class="menu-pain">
+            M
         </nav>
     </header>
 
