--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="keywords" content="blog, noticias, filmes, politica, esporte">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buenas News</title>
+
     <!-- Ícone da página -->
     <link rel="shortcut icon" href="./img/icone.png" type="image/x-icon">
+
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <!-- CSS Externo -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -27,8 +32,9 @@
             </ul>
         </nav>
 
+    <!-- Menu - Pain -->
         <nav class="menu-pain">
-            M
+            <i class='bx bx-menu'></i>
         </nav>
     </header>
 
@@ -42,7 +48,7 @@
             <div class="conteudo">
                 <span>
                     <h3>Israel e Hezbollah trocam ataques aéreos</h3>
-                    <p class="texto">Lorem.</p>
+                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nulla impedit beatae aliquid dignissimos explicabo hic autem tempora magni quod? Dolor fugiat exercitationem aspernatur, alias totam repellat quia vero velit itaque odit, molestias repudiandae sint tempora cupiditate debitis autem voluptatum modi beatae. Alias voluptates, ea praesentium perferendis molestias distinctio necessitatibus dolore sequi exercitationem obcaecati vero eius earum iusto aut odio quisquam consequatur at sapiente fugiat iste laboriosam quod nisi corporis neque. Assumenda aliquam eius non sequi voluptate dolores adipisci voluptates officia illo totam dicta, consectetur soluta nostrum, pariatur a nisi accusantium architecto amet neque vel expedita facere! Accusantium maxime ullam, vel eius ratione hic aliquam laborum? Tempore vitae incidunt culpa tenetur sapiente, modi est quod harum explicabo voluptas cupiditate ut molestiae doloribus cumque ad! Eaque architecto praesentium delectus odio placeat neque tempore non, cupiditate, nihil ab culpa? Beatae totam vitae laborum odit, minima ipsa! Cupiditate in ex iure vel perspiciatis, laudantium veritatis eius porro, iusto repellendus accusamus earum quis quod eum debitis id exercitationem. Quo atque quisquam voluptatum voluptas enim, eius molestias consectetur necessitatibus commodi maiores ducimus! Officia necessitatibus dicta expedita esse corporis excepturi modi, molestiae, explicabo reprehenderit voluptatem assumenda unde, eum iusto tenetur sit cum quaerat quasi sunt sapiente quo eveniet reiciendis aliquam dolores? Eius numquam placeat vitae expedita natus blanditiis maiores, eveniet vero repellendus! Necessitatibus sed, consequuntur labore rem similique dolorum voluptatem nam dolores minima in. Sequi amet exercitationem recusandae nobis quam voluptatem fugit error quas, eos vitae dolorum? Assumenda, saepe? Autem possimus est rerum ab, maxime repellat placeat doloribus quam, quaerat fuga iusto voluptate voluptatum, iure labore id voluptates sed nam? Reprehenderit incidunt tenetur saepe, nemo nisi sit cum ipsa dolore. Non voluptatibus sit voluptas odio reiciendis optio vitae debitis assumenda nisi quisquam, repellendus, accusantium dolorum quidem veritatis unde vero id dolore hic! Commodi placeat ipsum, aspernatur corporis sit sunt debitis laudantium perspiciatis cum assumenda mollitia obcaecati tempora beatae eius dolorem molestias quibusdam voluptate deleniti. Quam, nihil saepe itaque in dignissimos odit illo corrupti possimus modi explicabo, animi asperiores! Facere ratione veritatis cum! Ratione natus cupiditate dolore quae, autem id sapiente. Sit voluptate dolorem, minus libero quasi distinctio voluptatum eos? Possimus doloremque neque consequatur quam perferendis accusamus repellendus non facilis repellat voluptatum vitae, tenetur cum nisi recusandae necessitatibus, aliquid dolor quisquam quia fuga? Vel dolores rerum fugit vitae corrupti hic, laudantium culpa quaerat quas pariatur? Nihil, nobis tempora facere, inventore repellendus deserunt, consequatur soluta eveniet natus explicabo tenetur sunt? Debitis magnam maiores dolor repellat quasi nesciunt, unde totam autem maxime earum perferendis ipsum tenetur veniam! Illum, facere corrupti eos magni iure ut explicabo! Repudiandae, dolorem magnam. Error libero similique debitis sit amet rem fuga, assumenda tenetur voluptas veritatis! Pariatur praesentium nesciunt at error. Obcaecati reiciendis voluptatibus corrupti asperiores molestias totam veniam neque quam alias dolores corporis eius saepe cupiditate consectetur unde facere et sunt, mollitia amet maiores reprehenderit. Labore, itaque aperiam? Ut maiores doloribus corporis dolorem. Quia corrupti distinctio facere eum error consequuntur illo velit quidem quos officiis, sapiente ad rem voluptatibus quibusdam voluptas vitae. Ipsam, distinctio.</p>
                 </span>
 
                 <p class="leia-mais">leia mais ></p>
