Atualização> Media Queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="logo">
             <span>Buenas</span> News
         </div>
-
+    <!-- Menu -->
         <nav class="menu">
             <ul>
                 <li><a href="">HOME</a></li>
